brevity and chatgpt review implemented